# ai-agent-python

./: .dockerignore  AGENT.md  Dockerfile  README.md  cli.py  docker-compose.yml  main.py  pyproject.toml  todo.md
.cyberowl-agent/: config.toml
.cyberowl-agent/tools/: docker.py
agent/: agent.py  events.py  session.py
config/: config.py  loader.py
context/: compaction.py  context_manager.py  pruning.py
docs/: compact_pruning.md
lib/: __init__.py  constants.py  paths.py  response.py  text.py
lib/contants/: config.py  figures.py  spinner-verbs.py
llm/: client.py
playground/: README.md  agent_client.py  index.html  server.py  simple_client.py
propmpts/: system.py
provider/: llm_provider.py
scripts/: local_cli.sh
security/: approval_manager.py
test/: render.test.py  test_compaction.py
tools/: __init__.py  base.py  discovery.py  registry.py  subagent_config.py  subagents.py
tools/builtin/: __init__.py  edit_file.py  glob.py  grep.py  list_dir.py  memory.py  move_path.py  read_file.py  shell.py  todo.py  web_scrap.py  web_search.py  write_file.py
tools/mcp/: client.py  mcp_manager.py  mcp_tool.py
ui/: tui.py
