[project]
name = "ai-agent-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.1.0",
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
