[project]
name = "ai-agent-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.1.0",
    "click>=8.3.1",
    "ddgs>=9.11.4",
    "dotenv>=0.9.9",
    "openai>=2.24.0",
    "pyfiglet>=1.0.2",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "tiktoken>=0.12.0",
    "tomli>=2.4.0",
    "fastmcp>=3.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
